src/components/NewItem/NewItem.module.scss
@use "../../styles/main";

.form {
  @include main.center;
  flex-direction: column;
  min-width: 40rem;
  height: 10rem;
  margin: 1rem 0 5rem;

  @media (hover: hover) {
    &:hover {
      .input {
        width: 24rem;
        visibility: visible;
      }

      .submitButton {
        transform: rotate(90deg);
      }
    }
  }

  &:focus-within {
    width: 100%;

    .submitButton {
      transform: translateY(1.5rem) rotate(180deg);
    }

    .focusButton {
      opacity: 0;
      z-index: -99;
      transform: translateY(1.5rem);
    }

    .input {
      visibility: visible;
      transform: translateY(1.5rem);
      color: main.$color-secondary;
      outline: none;
      width: 70%;
      cursor: text;
    }
  }
}

.submitButton {
  @include main.center;
  background-color: transparent;
  border: none;
  font-size: 4rem;
  color: main.$color-tertiary-light;
  cursor: pointer;
  transition: all 0.4s;
  margin-bottom: 1rem;
}

.focusButton {
  background-color: transparent;
  border: none;
  color: main.$color-secondary;
  font-size: 2rem;
  opacity: 1;
  user-select: none;
  z-index: 99;
  transition: all 0.4s;
  cursor: pointer;
}

.input {
  background-color: transparent;
  border: none;
  font-size: 2rem;
  color: transparent;
  border-bottom: 1px solid main.$color-tertiary-light;
  visibility: hidden;
  width: 0;
  transform: translateY(-2rem);
  cursor: pointer;
  transition: all 0.4s;
}

